new implementation orders detail in admin interface
